--- a/styles/styles-mobile-lanscape.css
+++ b/styles/styles-mobile-lanscape.css
@@ -1,6 +1,8 @@
 
 
 
+
+
     html, body {
         margin: 0;
         font-family: Arial, sans-serif;
@@ -27,6 +29,7 @@
         border-bottom: 4px solid #72ab00;
         width: 100vw;
         position: absolute;
+        min-width: 1666px;
 
     }
 
@@ -59,7 +62,7 @@
         width: 85vw;
         height: 3vh;
         position: absolute;
-        margin-left: 65vw;
+        margin-left: 61vw;
         margin-top: -0.2vh;
         display: flex;
         font-size: 1.7vh;
@@ -68,7 +71,7 @@
 
     .links-header > a {
         text-decoration: overline;
-        font-size: 1.7vh;
+        font-size:2vh;
         color: #B0B0B0;
         font-weight: bold;
     }
@@ -600,6 +603,27 @@ margin-left: 7vw;
 
 
     }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
