--- a/styles/styles-mobile-portrait.css
+++ b/styles/styles-mobile-portrait.css
@@ -65,7 +65,7 @@
         width: 85vw;
         height: 3vh;
         position: absolute;
-        margin-left: 30vw;
+        right: 0;
         margin-top: -0.2vh;
         display: flex;
         font-size: 1.7vh;
@@ -97,7 +97,7 @@
     #mobile-index-intro {
         width: 85vw;
         border: 3px solid #B0B0B0;
-        height: 128.5vh;
+        height: auto;
         margin-top: 16vh;
         position: absolute;
         margin-left: 25vw;
@@ -105,8 +105,8 @@
     }
 
     #mobile-index-intro > img {
-        width: 72vw;
-        height: 48vh;
+        width: 700px;
+        height: 850px;
         margin-top: 2vh;
         margin-left: 7vw;
     }
@@ -159,13 +159,14 @@
     }
 
     #mobile-img-linkedin {
-        width: 13vw;
-        height: 3.7vh;
+        width: 140px;
+        height: 90px;
     }
 
     #mobile-img-twitter {
-        width: 10vw;
-        height: 3.7vh;
+        width: 110px;
+        height: 90px;
+        margin-left: 2vw;
     }
 
     #mobile-intro-link-cv {
@@ -255,7 +256,15 @@
     #mobile-cv-images-links {
         margin-top: 2vh;
     }
-
+    #mobile-cv-img-linkedin{
+         width: 140px;
+        height: 90px;
+    }
+    #mobile-cv-img-twitter{
+        width: 110px;
+        height: 90px;
+        margin-left: 2vw;
+    }
     #mobile-cv-link-pdf-top {
         width: 54vw;
         height: auto;
@@ -276,8 +285,8 @@
 
 
     #mobile-cv-intro-photo {
-        width: 72vw;
-        height: 48vh;
+        width: 700px;
+        height: 850px;
         margin-top: 4vh;
         margin-left: 7vw;
     }
@@ -401,7 +410,7 @@
         font-weight: bold;
         font-size: 2vh;
         background-color: #72ab00;
-        width: 85vw;
+        width: 840px;
         height: auto;
 
 
@@ -415,7 +424,7 @@
         font-weight: bold;
         font-size: 2vh;
         background-color: #72ab00;
-        width: 85vw;
+        width: 840px;
         height: auto;
         margin-top: 12vh;
         border-radius: 0.5vh;
@@ -428,7 +437,7 @@
         font-weight: bold;
         font-size: 2vh;
         background-color: #72ab00;
-        width: 85vw;
+        width: 840px;
         height: auto;
         margin-top: 12vh;
         border-radius: 0.5vh;
@@ -441,7 +450,7 @@
         font-weight: bold;
         font-size: 2vh;
         background-color: #72ab00;
-        width: 85vw;
+        width: 840px;
         height: auto;
         margin-top: 12vh;
         border-radius: 0.5vh;
@@ -454,7 +463,7 @@
         font-size: 2vh;
         font-weight: bold;
         background-color: #72ab00;
-        width: 85vw;
+        width: 840px;
         height: auto;
         margin-top: 12vh;
         border-radius: 0.5vh;
@@ -467,7 +476,7 @@
         font-weight: bold;
         font-size: 2vh;
         background-color: #72ab00;
-        width: 85vw;
+        width: 840px;
         height: auto;
         margin-top: 12vh;
         border-radius: 0.5vh;
@@ -476,48 +485,48 @@
     }
 
     #first-work > img {
-        width: 85vw;
-        height: 55vh;
+        width: 830px;
+        height: 1000px;
 
         border: 2px solid #B0B0B0;
         border-radius: 0.5vh;
     }
 
     #second-work > img {
-        width: 85vw;
-        height: 55vh;
+        width: 830px;
+        height: 1000px;
 
         border: 2px solid #B0B0B0;
         border-radius: 0.5vh;
     }
 
     #third-work > img {
-        width: 85vw;
-        height: 55vh;
+        width: 830px;
+        height: 1000px;
 
         border: 2px solid #B0B0B0;
         border-radius: 0.5vh;
     }
 
     #fourth-work > img {
-        width: 85vw;
-        height: 55vh;
+        width: 830px;
+        height: 1000px;
 
         border: 2px solid #B0B0B0;
         border-radius: 0.5vh;
     }
 
     #fifth-work > img {
-        width: 85vw;
-        height: 55vh;
+        width: 830px;
+        height: 1000px;
 
         border: 2px solid #B0B0B0;
         border-radius: 0.5vh;
     }
 
     #sixth-work > img {
-        width: 85vw;
-        height: 55vh;
+        width: 830px;
+        height: 1000px;
         border: 2px solid #B0B0B0;
         border-radius: 0.5vh;
     }
