--- a/cv-traducteur/styles/index.css
+++ b/cv-traducteur/styles/index.css
@@ -62,7 +62,7 @@ body {
 .up-header>ul {
 	list-style-type: none;
 	margin-left: auto;
-	margin-right: 1vw;
+	margin-right: 1.5rem;
 	display: flex;
 }
 
