--- a/construction-companie-site/styles/index.css
+++ b/construction-companie-site/styles/index.css
@@ -248,6 +248,7 @@ main {
 .services-name {
   grid-area: v;
   width: 100%;
+  height: auto;
 
 
 }
@@ -481,7 +482,9 @@ text-align: left;
 }
 
 
-
+.mobile-projects-link{
+  display: none;
+}
 .projects {
   display: flex;
   margin: auto;
@@ -720,7 +723,7 @@ footer a:nth-of-type(1) {
 }
 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1030px) {
 html,body{
   width: 100vw;
 }
@@ -971,7 +974,7 @@ html,body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    justify-items: center;
+  
     
   
   }
@@ -981,6 +984,7 @@ html,body{
     width: 90vw;
     height: 500px;
   margin-left: 5vw;
+  margin-bottom: 3rem;
     
   
     
@@ -991,6 +995,7 @@ html,body{
     width: 90vw;
     height: 500px;
     margin-left: 5vw;
+    margin-bottom: 3rem;
     
   }
   
@@ -998,11 +1003,12 @@ html,body{
     width: 90vw;
     height: 500px;
     margin-left: 5vw;
+    margin-bottom: 2rem;
   }
   
   .services img {
     width: 100%;
-    height: 250px;
+    height: 350px;
    
   }
   
@@ -1093,7 +1099,9 @@ html,body{
   .info>div:nth-child(4) {
     border-left: 1px solid white;
   }
-  
+  .mobile-projects-link{
+    display: inline;
+  }
 .projects {
   display: flex;
   margin: auto;
@@ -1257,7 +1265,9 @@ html,body{
 
 
 
-
+input{
+  border: 1px solid #1e2d3b;
+}
 
 .contact #name-contact {
   width: 99%;
