--- a/law-firm-website/styles/index.scss
+++ b/law-firm-website/styles/index.scss
@@ -1,18 +1,21 @@
 $main-color: rgb(0, 48, 91);
+$second-color:rgb(63, 130, 192);
+$third-color:rgb(3, 50, 93);
 
 
-html{
+html {
     padding: 0;
     margin: 0;
-   
+
 }
 
-body{
-    font-family: 'Roboto', Arial ,'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+body {
+    font-family: 'Roboto', Arial, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 0;
     margin: 0;
-   
+
 }
+
 header {
     position: fixed;
     left: 0;
@@ -23,185 +26,291 @@ header {
     z-index: 3;
 }
 
-main{
-   margin-top: 120px;
+main {
+    margin-top: 120px;
     display: grid;
     width: 100%;
-    
+
     grid-template-columns: repeat(12 1fr);
     grid-template-rows: repeat(7 1fr);
-    grid-template-areas: 
-    " m "
-    " s "
-    " a "
-    " i "
-    " o "
-    " c "
-    " t ";
-.main-image{
-    grid-area: m;
-    max-width: 100%;
-    height: 900px;
-}
-.sectors{
-grid-area: s;
-max-width: 100%;
-width: 100%;
-height: auto;
+    grid-template-areas:
+        " m "
+        " s "
+        " a "
+        " i "
+        " o "
+        " c "
+        " t ";
 
-}
-.about-us{
-    grid-area: a;
-}
-.secondary-image{
-    grid-area: i;
-}
-.our-lawyers{
-    grid-area: o;
-}
-.contact{
-    grid-area: c;
-}
-.to-up{
-    grid-area: t;
-}
-
-.main-image{
-    
-    background-image: url("../images/1.jpg");
-    background-size: cover;
-    display: flex;
-    background-position: center;
-
-.color-name{
-    width: 40%;
-    height: 100%;
-    background-color: rgba(0, 48, 91, 0.5);
-    display: flex;
-    flex-direction: column;
-   justify-content: center;
-   align-items: flex-end;  
-h1{
-    color: white;
-    font-size: 3.5rem;
-    width: 50%;
-    margin-right: 3rem;
-}
-p{
-    color: white;
-    font-size: 1.5rem;
-    width: 50%;
-    margin-right: 3rem;
-}
-}
-}
-
-.sectors{
-    display: flex;
-    margin-top: 100px;
-  
-.sectors-heading{
-    width: 40%;
-    display: flex;
-    justify-content: center;
-  
-    p{
-        font-size: 3.5rem;
-    text-transform: uppercase;
-    margin-left: 10%;
-    color: $main-color;
-    
-    }
-    
-}
-.sectors-sections{
-    width: 40%;
-    display: flex;
-    .material-icons{
-        color: #41b7c4;
-        display: inline;
+    .main-image {
+        grid-area: m;
+        max-width: 100%;
+        height: 900px;
     }
 
-    
-    
-       .first-section{
-           width: 49%;
-           display: flex;
-           flex-direction: column;
-           div{
+    .sectors {
+        grid-area: s;
+        max-width: 100%;
+        width: 100%;
+        height: auto;
+
+    }
+
+    .about-us {
+        grid-area: a;
+    }
+
+    .secondary-image {
+        grid-area: i;
+    }
+
+    .our-lawyers {
+        grid-area: o;
+    }
+
+    .contact {
+        grid-area: c;
+    }
+
+    .to-up {
+        grid-area: t;
+    }
+
+    .main-image {
+
+        background-image: url("../images/1.jpg");
+        background-size: cover;
+        display: flex;
+        background-position: center;
+
+        .color-name {
+            width: 40%;
+            height: 100%;
+            background-color: rgba(0, 48, 91, 0.5);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-end;
+
+            h1 {
+                color: white;
+                font-size: 3.5rem;
+                width: 50%;
+                margin-right: 3rem;
+            }
+
+            p {
+                color: white;
+                font-size: 1.5rem;
+                width: 50%;
+                margin-right: 3rem;
+            }
+        }
+    }
+
+    .sectors {
+        display: flex;
+        margin-top: 100px;
+        padding-bottom: 3.5rem;
+
+        .sectors-heading {
+            width: 40%;
+            display: flex;
+            justify-content: center;
+
+            p {
+                font-size: 3.5rem;
+                text-transform: uppercase;
+                margin-left: 10%;
+                color: $main-color;
+
+            }
+
+        }
+
+        .sectors-sections {
+            width: 40%;
+            display: flex;
+           
+
+            .material-icons {
+                color: #41b7c4;
+                display: inline;
+            }
+
+
+
+            .first-section {
+                width: 49%;
+                display: flex;
+                flex-direction: column;
                
-               margin-top: 2rem;
-               margin-right: 2%;
-           }
-           h2{
-               font-size: 1.6rem;
-               display: inline;
-               font-weight: 500;
-           }
-           p{
-               font-size: 1.4rem;
-               margin-top: 2rem;
-           }
-       }
-       .second-section{
-           width: 49%;
-           display: flex;
-           flex-direction: column;
-           div{
-            
-            margin-top: 2rem;
+                margin-right: 1rem;
+
+                div {
+
+                    margin-top: 2rem;
+                    margin-right: 2%;
+                }
+
+                h2 {
+                    font-size: 1.6rem;
+                    display: inline;
+                    font-weight: 500;
+                }
+
+                p {
+                    font-size: 1.4rem;
+                    margin-top: 2rem;
+                }
+            }
+
+            .second-section {
+                width: 49%;
+                display: flex;
+                flex-direction: column;
+               
+
+                div {
+
+                    margin-top: 2rem;
+                }
+
+                h2 {
+                    font-size: 1.6rem;
+                    display: inline;
+                    font-weight: 500;
+                }
+
+                p {
+                    font-size: 1.3rem;
+                    margin-top: 2rem;
+                }
+
+
+            }
+
         }
-        h2{
-            font-size: 1.6rem;
-            display: inline;
-            font-weight: 500;
+
+    }
+
+    .about-us {
+        max-width: 100%;
+        width: 100%;
+        height: auto;
+        background-color: $main-color;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+        text-align: center;
+        padding-bottom: 3.5rem;
+
+        h3 {
+            font-size: 3.5rem;
         }
-        p{
+
+        p {
             font-size: 1.3rem;
-            margin-top: 2rem;
         }
 
 
-       }
-    
-}
 
-}
 
-.about-us{
-    max-width: 100%;
+        h3,
+        p {
+            display: block;
+            width: 70%;
+        }
+
+
+    }
+
+
+    .secondary-image {
+        width: 100%;
+        max-width: 100%;
+        height: 700px;
+        background-image: url("../images/2.jpg");
+        background-size: cover;
+    }
+
+    .our-lawyers {
+        height: auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+
+
+
+        h4 {
+
+            width: 100%;
+            height: auto;
+            text-align: center;
+            font-size: 3.5rem;
+            color: $main-color;
+        }
+
+
+        .lawyer {
+            width: 230px;
+            height: auto;
+            box-sizing: border-box;
+
+
+            img {
+                width: 100%;
+                height: 50%;
+            }
+
+
+
+
+            p {
+                margin: 1rem;
+                text-align: center;
+
+            }
+
+            .lawyer-name {
+                color: $third-color;
+
+                text-transform: uppercase;
+                font-size: 1.4rem;
+            }
+
+            .lawyer-fonction {
+
+                text-transform: uppercase;
+                color: $second-color;
+                font-size: 1.3rem;
+            }
+
+            hr {
+                background-color: $second-color;
+                height: 1px;
+                border: none;
+            }
+
+            .lawyer-tel {
+                color: $third-color;
+                font-size: 1.1rem;
+            }
+
+            .lawyer-email {
+                color: $third-color;
+                font-size: 1.1rem;
+            }
+        }
+
+    }
+.contact{
     width: 100%;
-    height: auto;
-    background-color: $main-color;
-    color: white;
-    display: flex;
-    flex-direction: column;
-   align-items: center;
-   text-align: center;
-    h3{
-        font-size: 3.5rem;
-    }
-    p{
-        font-size:1.3rem;
-    }
-
-
-
-
-   h3 , p {
-    display: block;
-    width: 70%;
-
-   }
-
-
+    height: 800px;
 
 }
-
-
-
-
-
 
 
 
