--- a/law-firm-website/styles/index.scss
+++ b/law-firm-website/styles/index.scss
@@ -129,8 +129,11 @@ main {
         }
 
         .sectors-sections {
-            width: 40%;
+            width: 60%;
             display: flex;
+            justify-content: space-evenly;
+            flex-wrap: wrap;
+            
            
 
             .material-icons {
@@ -259,6 +262,16 @@ main {
             height: auto;
             box-sizing: border-box;
 
+            a{
+                text-decoration: none;
+                color: $third-color;
+                font-style: italic;
+               
+            }
+            a:hover{
+                opacity: 50%;
+                transition-duration: 0.5s;
+            }
 
             img {
                 width: 100%;
@@ -308,7 +321,50 @@ main {
     }
 .contact{
     width: 100%;
-    height: 800px;
+    height: 600px;
+    background-image: url("../images/6.jpg");
+    background-size: cover;
+    box-sizing: border-box;
+.background-one{
+    background-color: rgba(0, 48, 91, 0.5);
+    height: 100%;
+    width: 100%;
+
+
+    .background-two{
+        height: 100%;
+        width: 40%;
+        background-color: rgba(0, 48, 91, 0.5);
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+
+      p{
+          text-transform: uppercase;
+          display: block;
+          font-size: 3rem;
+          color: white;
+          margin-right: 3rem;
+      }
+    
+    }
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 }
 
