--- a/law-firm-website/styles/index.css
+++ b/law-firm-website/styles/index.css
@@ -1,6 +1,7 @@
 html {
   padding: 0;
   margin: 0;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -36,7 +37,8 @@ main .main-image {
   -ms-grid-column: 1;
   grid-area: m;
   max-width: 100%;
-  height: 900px;
+  height: auto;
+  min-height: 900px;
 }
 
 main .sectors {
@@ -88,7 +90,8 @@ main .main-image {
 }
 
 main .main-image .color-name {
-  width: 40%;
+  -ms-flex-preferred-size: 40%;
+      flex-basis: 40%;
   height: 100%;
   background-color: rgba(0, 48, 91, 0.5);
   display: -webkit-box;
@@ -104,20 +107,39 @@ main .main-image .color-name {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
+  -ms-flex-negative: 1;
+      flex-shrink: 1;
+  -webkit-box-flex: 3;
+      -ms-flex-positive: 3;
+          flex-grow: 3;
 }
 
 main .main-image .color-name h1 {
+  display: block;
   color: white;
   font-size: 3.5rem;
   width: 50%;
-  margin-right: 3rem;
+  margin-right: 8rem;
+  word-wrap: normal;
 }
 
 main .main-image .color-name p {
+  display: block;
   color: white;
   font-size: 1.5rem;
   width: 50%;
-  margin-right: 3rem;
+  margin-right: 8rem;
+}
+
+main .main-image .main-transparent {
+  -ms-flex-preferred-size: 60%;
+      flex-basis: 60%;
+  background-color: transparent;
+  -ms-flex-negative: 3;
+      flex-shrink: 3;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 main .sectors {
@@ -317,12 +339,12 @@ main .our-lawyers .lawyer .lawyer-name {
 
 main .our-lawyers .lawyer .lawyer-fonction {
   text-transform: uppercase;
-  color: #3f82c0;
+  color: #41b7c4;
   font-size: 1.3rem;
 }
 
 main .our-lawyers .lawyer hr {
-  background-color: #3f82c0;
+  background-color: #41b7c4;
   height: 1px;
   border: none;
 }
@@ -339,7 +361,7 @@ main .our-lawyers .lawyer .lawyer-email {
 
 main .contact {
   width: 100%;
-  height: 600px;
+  height: auto;
   background-image: url("../images/6.jpg");
   background-size: cover;
   -webkit-box-sizing: border-box;
@@ -350,11 +372,13 @@ main .contact .background-one {
   background-color: rgba(0, 48, 91, 0.5);
   height: 100%;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 main .contact .background-one .background-two {
   height: 100%;
-  width: 40%;
   background-color: rgba(0, 48, 91, 0.5);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -365,13 +389,182 @@ main .contact .background-one .background-two {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-preferred-size: 40%;
+      flex-basis: 40%;
+  -ms-flex-negative: 1;
+      flex-shrink: 1;
+  -webkit-box-flex: 2;
+      -ms-flex-positive: 2;
+          flex-grow: 2;
 }
 
-main .contact .background-one .background-two p {
+main .contact .background-one .background-two > p {
   text-transform: uppercase;
   display: block;
-  font-size: 3rem;
+  font-size: 3.5rem;
   color: white;
   margin-right: 3rem;
+  word-break: normal;
+}
+
+main .contact .background-one .background-text {
+  -ms-flex-preferred-size: 60%;
+      flex-basis: 60%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-left: 3rem;
+  -ms-flex-negative: 2;
+      flex-shrink: 2;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+main .contact .background-one .background-text .adress-heading {
+  font-size: 1.5rem;
+  text-transform: uppercase;
+}
+
+main .contact .background-one .background-text .adress {
+  font-size: 1.3rem;
+}
+
+main .contact .background-one .background-text .form-heading {
+  font-size: 1.3rem;
+}
+
+main .contact .background-one .background-text form {
+  width: 40%;
+  margin-bottom: 3rem;
+}
+
+main .contact .background-one .background-text form #name-contact {
+  height: 1.5rem;
+  width: 100%;
+  font-size: 1rem;
+}
+
+main .contact .background-one .background-text form #contact {
+  font-size: 1rem;
+  height: 1.5rem;
+  width: 100%;
+}
+
+main .contact .background-one .background-text form #comment {
+  font-size: 1rem;
+  width: 100%;
+}
+
+main .contact .background-one .background-text form #submit {
+  padding: 0.5rem 1rem;
+  font-size: 1.1rem;
+  background-color: #41b7c4;
+  border: none;
+  color: white;
+}
+
+main .contact .background-one .background-text form #submit:hover {
+  opacity: 80%;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+  cursor: pointer;
+}
+
+main .contact .background-one .background-text > p {
+  color: white;
+  display: block;
+}
+
+main .contact .background-one .background-text a {
+  color: white;
+  text-decoration: none;
+  font-style: italic;
+}
+
+main .contact .background-one .background-text a:hover {
+  opacity: 50%;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+}
+
+main .to-up {
+  width: 100%;
+  max-width: 100%;
+  background-color: #00305b;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main .to-up a {
+  color: white;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+main .to-up span {
+  margin-top: 0.5rem;
+  display: block;
+  font-size: 3rem;
+}
+
+main .to-up P {
+  display: block;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  padding: 0 auto;
+  margin: 0 auto 1.5rem auto;
+}
+
+footer {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+  color: #03325d;
+}
+
+footer p {
+  float: left;
+  font-size: 1rem;
+  margin-top: 1rem;
+  margin-left: 3%;
+}
+
+footer i {
+  float: right;
+  font-size: 2.1rem;
+  margin: 1rem;
+}
+
+footer i:hover {
+  opacity: 80%;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+  cursor: pointer;
+}
+
+footer a {
+  color: black;
 }
 /*# sourceMappingURL=index.css.map */
