--- a/law-firm-website/styles/index.css
+++ b/law-firm-website/styles/index.css
@@ -14,14 +14,78 @@ header {
   position: fixed;
   left: 0;
   top: 0;
-  height: 120px;
-  width: 100vw;
-  background-color: #ce9393;
-  z-index: 3;
+  height: 50px;
+  width: 100%;
+  max-width: 100%;
+  background-color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+header a {
+  text-decoration: none;
+  color: #00305b;
+}
+
+header a:hover {
+  opacity: 50%;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+}
+
+header .header-name {
+  width: 40%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+header .header-name a {
+  margin-right: 8rem;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+}
+
+header .header-name i {
+  color: #41b7c4;
+}
+
+header nav {
+  width: 60%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+header nav a {
+  -ms-flex-preferred-size: 30%;
+      flex-basis: 30%;
+  text-align: center;
+}
+
+header nav i {
+  margin-right: 0.3rem;
+  color: #41b7c4;
 }
 
 main {
-  margin-top: 120px;
+  margin-top: 50px;
   display: -ms-grid;
   display: grid;
   width: 100%;
@@ -546,14 +610,14 @@ footer {
 
 footer p {
   float: left;
-  font-size: 1rem;
-  margin-top: 1rem;
+  font-size: 0.9rem;
+  margin-top: 0.8rem;
   margin-left: 3%;
 }
 
 footer i {
   float: right;
-  font-size: 2.1rem;
+  font-size: 1.5rem;
   margin: 1rem;
 }
 
